# megadoc

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  REPORT.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260422_0001_initial.py  20260422_0002_knowledge_classifier.py  20260525_0003_knowledge_assertions.py  20260526_0004_accounting_facts.py  20260526_0005_accounting_fact_roles.py  20260526_0006_knowledge_contexts.py  20260526_0007_context_anchors.py  20260613_0008_topic_assignment_unique.py  20260613_0009_archive_identity.py  20260613_0010_review_payload.py
docs/: agent_handoff.md  api.md  extraction_schema.md  review_todo.md  simplification_implementation_plan.md  system_manual.md
infra/compose/: Dockerfile.app
infra/init/: create-buckets.sh
scripts/: api_perf_probe.sh  backfill_archive_identity.py  backfill_document_unit_titles.py  curl_examples.sh  fix_topic_classification.sql  rebuild_frontend_profiling.sh  seed_knowledge.py  topic_cleanup_report.py  ui_interaction_probe.sh  ui_perf_probe.sh  ui_render_profile.sh
services/frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
services/knowledge_classifier/: README.md
tests/: conftest.py
tests/integration/: test_api_ingestion.py
tests/knowledge/: __init__.py  fixtures.py  test_classification.py  test_openai_compat.py  test_pipeline_quality.py  test_routing.py  test_segmentation.py  test_topic_retrieval.py
tests/unit/: test_accounting_comparison.py  test_accounting_projection.py  test_accounting_statement.py  test_domain_models.py  test_dots_native_backend.py  test_ingestion_dispatch.py  (+11 more)
(+59 files in other folders)
