[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "megadoc"
version = "0.1.0"
description = "Self-hosted document ingestion pipeline"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.0",
  "boto3>=1.39.0",
  "celery[redis]>=5.5.0",
  "fastapi>=0.116.0",
  "greenlet>=3.2.0",
  "httpx>=0.28.0",
  "minio>=7.2.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "pypdf>=5.4.0",
  "python-json-logger>=3.3.0",
  "python-multipart>=0.0.20",
  "redis>=6.0.0",
  "sqlalchemy>=2.0.41",
  "structlog>=25.4.0",
  "tenacity>=9.1.0",
  "typer>=0.16.0",
  "uvicorn[standard]>=0.35.0",
  "docling>=2.72.0",
]

[project.optional-dependencies]
dev = [
  "black>=25.1.0",
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "C4"]

[tool.pytest.ini_options]
pythonpath = [
  "packages/common/src",
  "services/api/src",
  "services/worker/src",
  "services/cli/src",
  "services/knowledge_classifier/src",
  "services/knowledge_worker/src",
]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = [
  "packages/common/src",
  "services/api/src",
  "services/worker/src",
  "services/cli/src",
  "services/knowledge_classifier/src",
  "services/knowledge_worker/src",
]
include = ["common*", "api*", "worker*", "cli*", "knowledge_classifier*", "knowledge_worker*"]
